# ansible-role-setup-linux

./: README.md  main.yml  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: configure-zsh.yml  main.yml
tests/: test.yml
vars/: main.yml
