[tool.poetry]
name = "setup-ubuntu-vm"
version = "0.1.0"
description = "Python venv for running ansible playbooks and molecule test suite"
authors = ["Souldiv <amrut546@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
molecule = "^6.0.2"
ansible = "^9.0.1"
molecule-docker = "^2.1.0"
ansible-lint = "6.0"
yamllint = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
